// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`TextMate: AIVI + injected HTML (~html sigil) > handles self-closing tags and \`<\` that is not a tag 1`] = `
[
  {
    "line": 0,
    "tokens": [
      {
        "end": 4,
        "scopes": [],
        "start": 0,
      },
      {
        "end": 5,
        "scopes": [
          "keyword.operator.comparison.aivi",
        ],
        "start": 4,
      },
      {
        "end": 6,
        "scopes": [],
        "start": 5,
      },
      {
        "end": 13,
        "scopes": [
          "string.quoted.other.sigil.html.aivi",
          "storage.type.sigil.aivi",
        ],
        "start": 6,
      },
      {
        "end": 14,
        "scopes": [
          "string.quoted.other.sigil.html.aivi",
        ],
        "start": 13,
      },
      {
        "end": 18,
        "scopes": [
          "string.quoted.other.sigil.html.aivi",
          "entity.name.tag.aivi",
        ],
        "start": 14,
      },
      {
        "end": 19,
        "scopes": [
          "string.quoted.other.sigil.html.aivi",
        ],
        "start": 18,
      },
      {
        "end": 22,
        "scopes": [
          "string.quoted.other.sigil.html.aivi",
          "entity.other.attribute-name.aivi",
        ],
        "start": 19,
      },
      {
        "end": 23,
        "scopes": [
          "string.quoted.other.sigil.html.aivi",
        ],
        "start": 22,
      },
      {
        "end": 24,
        "scopes": [
          "string.quoted.other.sigil.html.aivi",
          "string.quoted.double.xml.aivi",
        ],
        "start": 23,
      },
      {
        "end": 25,
        "scopes": [
          "string.quoted.other.sigil.html.aivi",
          "string.quoted.double.xml.aivi",
        ],
        "start": 24,
      },
      {
        "end": 26,
        "scopes": [
          "string.quoted.other.sigil.html.aivi",
          "string.quoted.double.xml.aivi",
        ],
        "start": 25,
      },
      {
        "end": 27,
        "scopes": [
          "string.quoted.other.sigil.html.aivi",
        ],
        "start": 26,
      },
      {
        "end": 29,
        "scopes": [
          "string.quoted.other.sigil.html.aivi",
          "punctuation.definition.tag.aivi",
        ],
        "start": 27,
      },
      {
        "end": 30,
        "scopes": [
          "string.quoted.other.sigil.html.aivi",
        ],
        "start": 29,
      },
      {
        "end": 34,
        "scopes": [
          "string.quoted.other.sigil.html.aivi",
          "entity.name.tag.aivi",
        ],
        "start": 30,
      },
      {
        "end": 35,
        "scopes": [
          "string.quoted.other.sigil.html.aivi",
          "punctuation.definition.tag.aivi",
        ],
        "start": 34,
      },
      {
        "end": 40,
        "scopes": [
          "string.quoted.other.sigil.html.aivi",
        ],
        "start": 35,
      },
      {
        "end": 46,
        "scopes": [
          "string.quoted.other.sigil.html.aivi",
          "entity.name.tag.aivi",
        ],
        "start": 40,
      },
      {
        "end": 47,
        "scopes": [
          "string.quoted.other.sigil.html.aivi",
        ],
        "start": 46,
      },
      {
        "end": 54,
        "scopes": [
          "string.quoted.other.sigil.html.aivi",
          "storage.type.sigil.aivi",
        ],
        "start": 47,
      },
    ],
  },
]
`;

exports[`TextMate: AIVI + injected HTML (~html sigil) > tokenizes a simple HTML tag with attribute and string value 1`] = `
[
  {
    "line": 0,
    "tokens": [
      {
        "end": 2,
        "scopes": [],
        "start": 0,
      },
      {
        "end": 3,
        "scopes": [
          "keyword.operator.comparison.aivi",
        ],
        "start": 2,
      },
      {
        "end": 4,
        "scopes": [],
        "start": 3,
      },
      {
        "end": 11,
        "scopes": [
          "string.quoted.other.sigil.html.aivi",
          "storage.type.sigil.aivi",
        ],
        "start": 4,
      },
      {
        "end": 12,
        "scopes": [
          "string.quoted.other.sigil.html.aivi",
        ],
        "start": 11,
      },
      {
        "end": 16,
        "scopes": [
          "string.quoted.other.sigil.html.aivi",
          "entity.name.tag.aivi",
        ],
        "start": 12,
      },
      {
        "end": 17,
        "scopes": [
          "string.quoted.other.sigil.html.aivi",
        ],
        "start": 16,
      },
      {
        "end": 22,
        "scopes": [
          "string.quoted.other.sigil.html.aivi",
          "entity.other.attribute-name.aivi",
        ],
        "start": 17,
      },
      {
        "end": 23,
        "scopes": [
          "string.quoted.other.sigil.html.aivi",
        ],
        "start": 22,
      },
      {
        "end": 24,
        "scopes": [
          "string.quoted.other.sigil.html.aivi",
          "string.quoted.double.xml.aivi",
        ],
        "start": 23,
      },
      {
        "end": 25,
        "scopes": [
          "string.quoted.other.sigil.html.aivi",
          "string.quoted.double.xml.aivi",
        ],
        "start": 24,
      },
      {
        "end": 26,
        "scopes": [
          "string.quoted.other.sigil.html.aivi",
          "string.quoted.double.xml.aivi",
        ],
        "start": 25,
      },
      {
        "end": 27,
        "scopes": [
          "string.quoted.other.sigil.html.aivi",
          "punctuation.definition.tag.aivi",
        ],
        "start": 26,
      },
      {
        "end": 32,
        "scopes": [
          "string.quoted.other.sigil.html.aivi",
        ],
        "start": 27,
      },
      {
        "end": 38,
        "scopes": [
          "string.quoted.other.sigil.html.aivi",
          "entity.name.tag.aivi",
        ],
        "start": 32,
      },
      {
        "end": 39,
        "scopes": [
          "string.quoted.other.sigil.html.aivi",
        ],
        "start": 38,
      },
      {
        "end": 46,
        "scopes": [
          "string.quoted.other.sigil.html.aivi",
          "storage.type.sigil.aivi",
        ],
        "start": 39,
      },
    ],
  },
]
`;

exports[`TextMate: AIVI + injected HTML (~html sigil) > tokenizes nested tags and returns to AIVI scopes outside the sigil 1`] = `
[
  {
    "line": 0,
    "tokens": [
      {
        "end": 3,
        "scopes": [
          "keyword.other.aivi",
        ],
        "start": 0,
      },
      {
        "end": 8,
        "scopes": [],
        "start": 3,
      },
      {
        "end": 9,
        "scopes": [
          "keyword.operator.aivi",
        ],
        "start": 8,
      },
      {
        "end": 12,
        "scopes": [],
        "start": 9,
      },
      {
        "end": 13,
        "scopes": [
          "punctuation.section.bracket.aivi",
        ],
        "start": 12,
      },
      {
        "end": 21,
        "scopes": [
          "entity.name.type.aivi",
        ],
        "start": 13,
      },
      {
        "end": 22,
        "scopes": [
          "punctuation.section.bracket.aivi",
        ],
        "start": 21,
      },
      {
        "end": 26,
        "scopes": [],
        "start": 22,
      },
      {
        "end": 27,
        "scopes": [
          "keyword.operator.comparison.aivi",
        ],
        "start": 26,
      },
      {
        "end": 28,
        "scopes": [],
        "start": 27,
      },
      {
        "end": 35,
        "scopes": [
          "string.quoted.other.sigil.html.aivi",
          "storage.type.sigil.aivi",
        ],
        "start": 28,
      },
      {
        "end": 36,
        "scopes": [
          "string.quoted.other.sigil.html.aivi",
        ],
        "start": 35,
      },
      {
        "end": 44,
        "scopes": [
          "string.quoted.other.sigil.html.aivi",
          "entity.name.tag.aivi",
        ],
        "start": 36,
      },
      {
        "end": 45,
        "scopes": [
          "string.quoted.other.sigil.html.aivi",
          "punctuation.definition.tag.aivi",
        ],
        "start": 44,
      },
      {
        "end": 50,
        "scopes": [
          "string.quoted.other.sigil.html.aivi",
          "entity.name.tag.aivi",
        ],
        "start": 45,
      },
      {
        "end": 51,
        "scopes": [
          "string.quoted.other.sigil.html.aivi",
        ],
        "start": 50,
      },
      {
        "end": 53,
        "scopes": [
          "string.quoted.other.sigil.html.aivi",
          "entity.other.attribute-name.aivi",
        ],
        "start": 51,
      },
      {
        "end": 54,
        "scopes": [
          "string.quoted.other.sigil.html.aivi",
        ],
        "start": 53,
      },
      {
        "end": 55,
        "scopes": [
          "string.quoted.other.sigil.html.aivi",
          "string.quoted.double.xml.aivi",
        ],
        "start": 54,
      },
      {
        "end": 56,
        "scopes": [
          "string.quoted.other.sigil.html.aivi",
          "string.quoted.double.xml.aivi",
        ],
        "start": 55,
      },
      {
        "end": 57,
        "scopes": [
          "string.quoted.other.sigil.html.aivi",
          "string.quoted.double.xml.aivi",
        ],
        "start": 56,
      },
      {
        "end": 58,
        "scopes": [
          "string.quoted.other.sigil.html.aivi",
          "punctuation.definition.tag.aivi",
        ],
        "start": 57,
      },
      {
        "end": 59,
        "scopes": [
          "string.quoted.other.sigil.html.aivi",
        ],
        "start": 58,
      },
      {
        "end": 66,
        "scopes": [
          "string.quoted.other.sigil.html.aivi",
          "entity.name.tag.aivi",
        ],
        "start": 59,
      },
      {
        "end": 76,
        "scopes": [
          "string.quoted.other.sigil.html.aivi",
          "entity.name.tag.aivi",
        ],
        "start": 66,
      },
      {
        "end": 77,
        "scopes": [
          "string.quoted.other.sigil.html.aivi",
        ],
        "start": 76,
      },
      {
        "end": 84,
        "scopes": [
          "string.quoted.other.sigil.html.aivi",
          "storage.type.sigil.aivi",
        ],
        "start": 77,
      },
      {
        "end": 88,
        "scopes": [],
        "start": 84,
      },
      {
        "end": 89,
        "scopes": [
          "keyword.operator.comparison.aivi",
        ],
        "start": 88,
      },
      {
        "end": 90,
        "scopes": [],
        "start": 89,
      },
      {
        "end": 91,
        "scopes": [
          "constant.numeric.aivi",
        ],
        "start": 90,
      },
    ],
  },
]
`;

exports[`TextMate: AIVI + injected HTML (~html sigil) > treats event handler attributes as HTML (no JS parsing required) 1`] = `
[
  {
    "line": 0,
    "tokens": [
      {
        "end": 9,
        "scopes": [],
        "start": 0,
      },
      {
        "end": 10,
        "scopes": [
          "keyword.operator.comparison.aivi",
        ],
        "start": 9,
      },
      {
        "end": 16,
        "scopes": [],
        "start": 10,
      },
      {
        "end": 20,
        "scopes": [
          "entity.name.type.aivi",
        ],
        "start": 16,
      },
      {
        "end": 26,
        "scopes": [],
        "start": 20,
      },
      {
        "end": 27,
        "scopes": [
          "keyword.operator.comparison.aivi",
        ],
        "start": 26,
      },
      {
        "end": 28,
        "scopes": [],
        "start": 27,
      },
      {
        "end": 35,
        "scopes": [
          "string.quoted.other.sigil.html.aivi",
          "storage.type.sigil.aivi",
        ],
        "start": 28,
      },
      {
        "end": 36,
        "scopes": [
          "string.quoted.other.sigil.html.aivi",
        ],
        "start": 35,
      },
      {
        "end": 43,
        "scopes": [
          "string.quoted.other.sigil.html.aivi",
          "entity.name.tag.aivi",
        ],
        "start": 36,
      },
      {
        "end": 44,
        "scopes": [
          "string.quoted.other.sigil.html.aivi",
        ],
        "start": 43,
      },
      {
        "end": 51,
        "scopes": [
          "string.quoted.other.sigil.html.aivi",
          "entity.other.attribute-name.aivi",
        ],
        "start": 44,
      },
      {
        "end": 52,
        "scopes": [
          "string.quoted.other.sigil.html.aivi",
        ],
        "start": 51,
      },
      {
        "end": 53,
        "scopes": [
          "string.quoted.other.sigil.html.aivi",
          "meta.interpolation.aivi",
          "punctuation.section.interpolation.begin.aivi",
        ],
        "start": 52,
      },
      {
        "end": 61,
        "scopes": [
          "string.quoted.other.sigil.html.aivi",
          "meta.interpolation.aivi",
        ],
        "start": 53,
      },
      {
        "end": 62,
        "scopes": [
          "string.quoted.other.sigil.html.aivi",
          "meta.interpolation.aivi",
          "punctuation.section.interpolation.end.aivi",
        ],
        "start": 61,
      },
      {
        "end": 63,
        "scopes": [
          "string.quoted.other.sigil.html.aivi",
          "punctuation.definition.tag.aivi",
        ],
        "start": 62,
      },
      {
        "end": 65,
        "scopes": [
          "string.quoted.other.sigil.html.aivi",
        ],
        "start": 63,
      },
      {
        "end": 74,
        "scopes": [
          "string.quoted.other.sigil.html.aivi",
          "entity.name.tag.aivi",
        ],
        "start": 65,
      },
      {
        "end": 75,
        "scopes": [
          "string.quoted.other.sigil.html.aivi",
        ],
        "start": 74,
      },
      {
        "end": 82,
        "scopes": [
          "string.quoted.other.sigil.html.aivi",
          "storage.type.sigil.aivi",
        ],
        "start": 75,
      },
    ],
  },
]
`;

exports[`TextMate: AIVI + injected HTML (~html sigil) > treats type signature lines as a single scope (no colored braces) 1`] = `
[
  {
    "line": 0,
    "tokens": [
      {
        "end": 70,
        "scopes": [
          "meta.type.signature.aivi",
        ],
        "start": 0,
      },
    ],
  },
]
`;
